# fdroid_auto

./: LICENSE  README.md  pyproject.toml
src/: defaults.py  fdroid-auto.py  fdroid_auto.py  packages.py  packages_from_file.py  term_args.py
src/apps/: download.txt  uninstall.txt
src/fdroid_auto/: defaults.py  fdroid_auto.py  packages.py  term_args.py
src/fdroid_auto/apps/: download.txt  uninstall.txt
